--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-numpy~=1.18.5
-numba~=0.51.2
+
 empyrical~=0.5.3
 matplotlib~=3.3.0
+numpy~=1.18.5
+numba~=0.51.2
+
+
 plotly>=4.11.0
+plotly-orca>=3.4.3
+psutil>=5.7.2
+
 talib >=0.4.19
-
-psutil~=5.7.2
-plotly~=4.11.0
-plotly-orca~=3.4.3
-
 yfinance>=0.1.54
